--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,80 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".core.AndroidRoadmapApp"
         android:theme="@style/Theme.AndroidRoadmap"
         tools:targetApi="31">
-        <activity
-            android:name=".solid.presentation.ISPActivity"
-            android:exported="false"
-            android:label="@string/title_activity_ispactivity"
-            android:theme="@style/Theme.AndroidRoadmap">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".solid.presentation.DIPActivity"
-            android:exported="false"
-            android:label="@string/title_activity_dipactivity"
-            android:theme="@style/Theme.AndroidRoadmap">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".solid.presentation.LiskovActivity"
-            android:exported="false"
-            android:label="@string/title_activity_liskov"
-            android:theme="@style/Theme.AndroidRoadmap">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".solid.presentation.OCPActivity"
-            android:exported="false"
-            android:label="@string/title_activity_ocpactivity"
-            android:theme="@style/Theme.AndroidRoadmap">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".solid.presentation.SRPActivity"
-            android:exported="false"
-            android:label="@string/title_activity_srp"
-            android:theme="@style/Theme.AndroidRoadmap">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".solid.presentation.SolidActivity"
-            android:exported="false"
-            android:label="@string/title_activity_solid"
-            android:theme="@style/Theme.AndroidRoadmap">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".basesandroid.BasesAndroid"
-            android:exported="false"
-            android:label="@string/title_activity_bases_android"
-            android:theme="@style/Theme.AndroidRoadmap">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".compose.ComposeCatalogActivity"
-            android:exported="false"
-            android:label="@string/title_activity_compose_catalog"
-            android:theme="@style/Theme.AndroidRoadmap">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
